change setInterval to setTimeout and fix spacing of posted text

--- a/tiles/report-comments/tiles/report-comments/public/stylesheets/main.css
+++ b/tiles/report-comments/tiles/report-comments/public/stylesheets/main.css
@@ -27,3 +27,8 @@ textarea#comment-box {
   height: 200px;
   resize: none;
 }
+
+#posted-text {
+  margin: 20px;
+  float: left;
+}
